using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace Backupper.Core
{
    public static class WorkerTypeRegister
    {

        public static int Register(Dictionary<Int64, Type> register)
        {
            return 0;
        }

    }
}
